--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Photos Index</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments/resources :: head(title='PhotosGallery')"></head>
 <body>
-<div class="container">
-    <h1>Hello it's index</h1>
-</div>
+<header>
+    <nav th:replace="fragments/resources :: navbar"></nav>
+</header>
+<main>
+    <div class="container">
+        <h1>Hello it's index</h1>
+        <hr>
+        <!--        add input search in order to filter result by name-->
+        <form th:action="@{/photos}" method="GET">
+            <div class="input-group">
+                <input class="form-control"
+                       type="text"
+                       name="search"
+                       th:value="${param.search}"
+                       placeholder="Cerca foto">
+                <button type="submit" class="btn btn-primary">Cerca</button>
+            </div>
+        </form>
+        <div class="row row-cols-lg-2">
+            <div th:if="${photoList != null}" th:each="photo : ${photoList}"
+                 class="my-2 col d-flex justify-content-center">
+                <div class="card h-100" style="width: 30rem;">
+                    <img th:src="${photo.url}" class="card-img-top" alt="photo">
+                    <div class="card-body">
+                        <h5 th:text="${photo.title}" class="card-title"></h5>
+                        <p th:text="${photo.description}" class="card-text"></p>
+                    </div>
+                    <div class="card-body">
+                        <a th:href="@{photos/show/{id}(id=${photo.id})}" class="btn btn-success card-link">Mostra dettagli</a>
+                            <a th:href="@{photos/edit/{id}(id=${photo.id})}"
+                               class="card-link btn btn-warning me-2">Modifica</a>
+                            <form method="POST" th:action="@{/photos/delete/{id}(id=${photo.id})}"
+                                  onsubmit="return confirm('Sei sicuro?')">
+                                <button type="submit" class="btn btn-danger">Cancella Foto</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div th:if="${photoList == null or #lists.isEmpty(photoList)}" class="alert alert-danger mt-2" role="alert">
+            <h3 th:text="'Non ci sono risultati da mostrare'"></h3>
+        </div>
+
+
+    </div>
+</main>
 </body>
 </html>
