--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -9,12 +9,14 @@
     <div class="container">
         <h1>Hello it's Show</h1>
         <hr>
-        <div class="row row-cols-lg-2">
-            <div class="card h-100" style="width: 30rem;">
-                <img th:src="${photo.url}" class="card-img-top" alt="photo">
-                <div class="card-body">
-                    <h5 th:text="${photo.title}" class="card-title"></h5>
-                    <p th:text="${photo.description}" class="card-text"></p>
+        <div class="row">
+            <div class="col">
+                <div class="card" style="width: 30rem;">
+                    <img th:src="${photo.url}" class="card-img-top" alt="photo">
+                    <div class="card-body">
+                        <h5 th:text="${photo.title}" class="card-title"></h5>
+                        <p th:text="${photo.description}" class="card-text"></p>
+                    </div>
                 </div>
             </div>
         </div>
