--- a/src/main/resources/templates/photos/edit.html
+++ b/src/main/resources/templates/photos/edit.html
@@ -7,11 +7,11 @@
 </header>
 <main>
     <div class="container">
-        <h1>Aggiungi una nuova foto alla gallery</h1>
+        <h1>Modifica foto</h1>
         <hr>
         <div class="row">
             <div class="col">
-                <form id="photo-store" th:action="@{/photos/store}" th:object="${photo}" method="POST">
+                <form id="photo-store" th:action="@{/photos/update}" th:object="${photo}" method="POST">
                     <div class="mb-3">
                         <label for="title" class="form-label">Titolo</label>
                         <input type="text" class="form-control" th:field="*{title}" th:errorClass="is-invalid"
@@ -43,7 +43,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="form-check mb-3" th:each="category : ${categories}">
+                    <div class="form-check" th:each="category : ${categories}">
                         <input class="form-check-input" type="checkbox"
                                th:value="${category.id}" id="|category_${category.id}"
                                th:field="*{categories}">
@@ -55,7 +55,7 @@
                         <input class="form-check-input" type="radio" name="visible"
                                id="isVisibleOn"
                                value="true"
-                               checked>
+                               th:checked="*{visible}">
                         <label class="form-check-label" for="isVisibleOn">
                             Visibile nella Gallery
                         </label>
@@ -63,14 +63,14 @@
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="visible"
                                id="isVisibleOff"
-                               value="false">
+                               value="false"
+                               th:checked="*{!visible}">
                         <label class="form-check-label" for="isVisibleOff">
                             Nascosta nella Gallery
                         </label>
                     </div>
-
                     <div class="mt-3">
-                        <button class="btn btn-primary" type="submit">Aggiungi una nuova foto</button>
+                        <button class="btn btn-primary" type="submit">Modifica la foto</button>
                         <button class="btn btn-danger" type="reset">Svuota i campi</button>
                     </div>
                 </form>
