--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -25,11 +25,14 @@
                  class="my-2 col d-flex justify-content-center">
                 <div class="card h-100" style="width: 30rem;">
                     <img th:src="${photo.url}" class="card-img-top" alt="photo">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item" th:each="category : ${photo.categories}"
+                            th:text="${category.name}"></li>
+                    </ul>
                     <div class="card-body">
                         <h5 th:text="${photo.title}" class="card-title"></h5>
                         <p th:text="${photo.description}" class="card-text"></p>
-                    </div>
-                    <div class="card-body">
+
                         <a th:href="@{photos/show/{id}(id=${photo.id})}" class="btn btn-success card-link">Mostra
                             dettagli</a>
                         <a th:href="@{photos/edit/{id}(id=${photo.id})}"
