--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -13,6 +13,10 @@
             <div class="col">
                 <div class="card" style="width: 30rem;">
                     <img th:src="${photo.url}" class="card-img-top" alt="photo">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item" th:each="category : ${photo.categories}"
+                            th:text="${category.name}"></li>
+                    </ul>
                     <div class="card-body">
                         <h5 th:text="${photo.title}" class="card-title"></h5>
                         <p th:text="${photo.description}" class="card-text"></p>
