--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/photos/create}">Aggiungi una nuova foto</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/categories}">Gestisci Categorie</a>
+                </li>
             </ul>
         </div>
     </div>
