--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -25,13 +25,27 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/photos}">Photos</a>
+                    <a class="nav-link" th:href="@{/photos}">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/photos/create}">Aggiungi una nuova foto</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/categories}">Gestisci Categorie</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/messages}">Messaggi</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Benvenuto <span sec:authentication="name"></span>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" th:href="@{/logout}">Logout</a>
+                    </div>
                 </li>
             </ul>
         </div>
