--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -7,8 +7,7 @@
 </header>
 <main>
     <div class="container">
-        <h1>Hello it's index</h1>
-        <hr>
+        <h1>Photo Gallery</h1>
         <!--        add input search in order to filter result by name-->
         <form th:action="@{/photos}" method="GET">
             <div class="input-group">
@@ -23,7 +22,7 @@
         <div class="row row-cols-lg-2">
             <div th:if="${photoList != null}" th:each="photo : ${photoList}"
                  class="my-2 col d-flex justify-content-center">
-                <div class="card h-100" style="width: 30rem;">
+                <div class="card" style="width: 30rem;">
                     <img th:src="${photo.url}" class="card-img-top" alt="photo">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item" th:each="category : ${photo.categories}"
