--- a/src/main/resources/templates/photos/edit.html
+++ b/src/main/resources/templates/photos/edit.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="mt-3">
                         <button class="btn btn-primary" type="submit">Modifica la foto</button>
-                        <button class="btn btn-danger" type="reset">Svuota i campi</button>
+                        <button class="btn btn-danger" type="reset">Cancella modifiche</button>
                     </div>
                 </form>
 
