--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -48,6 +48,13 @@
                         <button class="btn btn-primary" type="submit">Modifica la foto</button>
                     </div>
                 </form>
+                <div th:if="${message} != null" th:text="${message}"
+                     class="mt-2 alert alert-success alert-dismissible fade show"
+                     role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
