--- a/src/main/resources/templates/photos/create.html
+++ b/src/main/resources/templates/photos/create.html
@@ -5,9 +5,9 @@
 <header>
     <nav th:replace="fragments/resources :: navbar"></nav>
 </header>
-<main>
+<main class="custom-main">
     <div class="container">
-        <h1>Aggiungi una nuova foto alla gallery</h1>
+        <h1 class="display-4">Aggiungi una nuova foto alla gallery</h1>
         <hr>
         <div class="row">
             <div class="col">
