--- a/src/main/resources/templates/photos/edit.html
+++ b/src/main/resources/templates/photos/edit.html
@@ -7,7 +7,7 @@
 </header>
 <main>
     <div class="container">
-        <h1>Modifica foto</h1>
+        <h1 class="display-4">Modifica foto</h1>
         <hr>
         <div class="row">
             <div class="col">
