--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -7,12 +7,11 @@
 </header>
 <main>
     <div class="container">
-        <h1>Hello it's Show</h1>
-        <hr>
+        <h1 class="display-4">Dettagli</h1>
         <div class="row">
-            <div class="col">
-                <div class="card" style="width: 30rem;">
-                    <img th:src="${photo.url}" class="card-img-top" alt="photo">
+            <div class="col-md-6 justify-content-center">
+                <div class="card">
+                    <img th:src="${photo.url}" class="custom-img card-img-top" alt="photo">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item" th:each="category : ${photo.categories}"
                             th:text="${category.name}"></li>
@@ -23,7 +22,7 @@
                     </div>
                 </div>
             </div>
-            <div sec:authorize="hasAuthority('SUPERADMIN')" class="col">
+            <div sec:authorize="hasAuthority('SUPERADMIN')" class="col-md-6">
                 <form id="photo-update" th:action="@{/photos/update/visibility}" th:object="${photo}" method="POST">
                     <input th:field="*{id}" hidden type="text">
                     <div class="form-check">
